--- a/core/provider/CMakeLists.txt
+++ b/core/provider/CMakeLists.txt
@@ -18,6 +18,7 @@ project(provider)
 file(GLOB LIB_SOURCE_FILES *.cpp *.h)
 
 set(PROVIDER_SUB_DIRECTORIES_LIST    
+    config
     monitor/profile_sender config/feedbacker config/provider config/common_provider protobuf/config_server/v1 protobuf/config_server/v2
 )
 
