--- a/core/unittest/CMakeLists.txt
+++ b/core/unittest/CMakeLists.txt
@@ -32,6 +32,9 @@ if (MSVC)
 endif ()
 
 macro(add_core_subdir)
+    if (ENABLE_ENTERPRISE)
+        add_subdirectory(apm)
+    endif()
     add_subdirectory(app_config)
     add_subdirectory(batch)
     add_subdirectory(checkpoint)
@@ -60,6 +63,7 @@ macro(add_core_subdir)
     add_subdirectory(sender)
     add_subdirectory(serializer)
     add_subdirectory(route)
+    add_subdirectory(task)
     add_subdirectory(task_pipeline)
     if (LINUX)
         add_subdirectory(ebpf)
