--- a/core/unittest/reader/CMakeLists.txt
+++ b/core/unittest/reader/CMakeLists.txt
@@ -42,6 +42,9 @@ target_link_libraries(force_read_unittest ${UT_BASE_TARGET})
 add_executable(file_tag_unittest FileTagUnittest.cpp)
 target_link_libraries(file_tag_unittest ${UT_BASE_TARGET})
 
+add_executable(log_file_reader_resolved_path_unittest LogFileReaderResolvedPathUnittest.cpp)
+target_link_libraries(log_file_reader_resolved_path_unittest ${UT_BASE_TARGET})
+
 if (UNIX)
     file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/testDataSet)
     file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/testDataSet/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/testDataSet/)
@@ -60,3 +63,4 @@ gtest_discover_tests(source_buffer_unittest)
 gtest_discover_tests(get_last_line_data_unittest)
 gtest_discover_tests(force_read_unittest)
 gtest_discover_tests(file_tag_unittest)
+gtest_discover_tests(log_file_reader_resolved_path_unittest)
